Cloudinary upload image functionality and UI to upload done

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://cloudinary_owner:vNPh05kZdOIV@ep-round-glitter-a2dd3lso.eu-central-1.aws.neon.tech/cloudinary?sslmode=require"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlussdv5i"
+CLOUDINARY_API_KEY="951727927556146"
+CLOUDINARY_API_SECRET="KgVqBm4HG_ashJFdZiEyf5cvFb4"
