--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@prisma/client": "^5.18.0",
     "axios": "^1.7.4",
     "cloudinary": "^2.4.0",
+    "dayjs": "^1.11.12",
+    "filesize": "^10.1.4",
+    "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-cloudinary": "^6.10.0",
     "react": "^18",
